# AetherSSH

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/pages/: ssh.tsx
